cabal-version:       >=1.10

name:                microtonal-calculator
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Matthew Yacavone
maintainer:          matthew@yacavone.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Interval
                       Data.Interval.Type
                       Data.Interval.Pythagorean
                       Data.Interval.FJS
                       Data.Monzo
                       Data.Algebraic
                       Data.ExpList
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15,
                       primes
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-orphans -Wno-type-defaults

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-orphans -Wno-type-defaults
  main-is:             Spec.hs
  build-depends:       base >=4.14 && <4.15,
                       primes,
                       microtonal-calculator,
                       hspec,
                       QuickCheck
